integrated spring and hibernate with play